feeding_system_demo_wifi/MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.19', folder: 'D:\software\Keil\Core\ARM\ARMCLANG\Bin'
Rebuild target 'feeding_system'
Note: source file '../Middlewares/Third_Party/RealThread_RTOS/src/timer.c' - object file renamed from 'feeding_system\timer.o' to 'feeding_system\timer_1.o'.compiling usart.c...
compiling stm32f1xx_it.c...
compiling data_structure.c...
compiling timer.c...
compiling stm32f1xx_hal_rcc_ex.c...
compiling stm32f1xx_hal_msp.c...
compiling stm32f1xx_hal_gpio_ex.c...
compiling i2c.c...
compiling gpio.c...
assembling startup_stm32f103xb.s...
compiling stm32f1xx_hal_gpio.c...
../Core/Src/main.c(170): error: too many arguments to function call, expected 6, have 7
insertPlan(&plans, 1, 1, *newTime(12, 5, 0), 10, *newDate(2023, 1, 1), *newDate(2023, 12, 31));
~~~~~~~~~~                                                             ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/data_structure.h(54): note: 'insertPlan' declared here
void insertPlan(Plan** plans,int device, Time time, int duration, Date beginDate, Date endDate);
     ^
../Core/Src/main.c(171): error: too many arguments to function call, expected 6, have 7
insertPlan(&plans, 2, 2, *newTime(13, 5, 0), 10, *newDate(2023, 6, 1), *newDate(2023, 6, 30));
~~~~~~~~~~                                                             ^~~~~~~~~~~~~~~~~~~~~
../Core/Src/data_structure.h(54): note: 'insertPlan' declared here
void insertPlan(Plan** plans,int device, Time time, int duration, Date beginDate, Date endDate);
     ^
2 errors generated.
compiling main.c...
compiling stm32f1xx_hal.c...
compiling stm32f1xx_hal_rcc.c...
compiling stm32f1xx_hal_dma.c...
compiling stm32f1xx_hal_cortex.c...
compiling stm32f1xx_hal_pwr.c...
compiling stm32f1xx_hal_flash.c...
compiling stm32f1xx_hal_tim.c...
compiling cpu.c...
compiling clock.c...
compiling stm32f1xx_hal_tim_ex.c...
compiling stm32f1xx_hal_exti.c...
compiling system_stm32f1xx.c...
compiling components.c...
compiling stm32f1xx_hal_flash_ex.c...
compiling idle.c...
compiling ipc.c...
compiling irq.c...
assembling context_rvds.S...
compiling mem.c...
compiling memheap.c...
compiling mempool.c...
compiling slab.c...
compiling object.c...
compiling scheduler.c...
compiling timer.c...
compiling cpuport.c...
compiling thread.c...
compiling finsh_port.c...
compiling board.c...
compiling cmd.c...
compiling kservice.c...
compiling shell.c...
compiling stm32f1xx_hal_uart.c...
compiling msh.c...
compiling stm32f1xx_hal_i2c.c...
"feeding_system\feeding_system.axf" - 2 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:03
